network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: db-policy

spec:
 podSelector:
  matchLabels:
   role: db

policyTypes:
 - Ingress
ingress:
 - from:
 - podSelector:
    matchLabels:
     name: api-pod
 ports:
  - protocol: TCP
    port: 3306

# Ingress refers to the traffic that is entering a Pod, 
# while Egress refers to the traffic that is exiting a Pod.
